force-app/main/default/objects/Collaboration_Request__c/Collaboration_Request__c.object-meta.xml
<CustomObject>
    <label>Collaboration Request</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collaboration Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>