force-app/main/default/objects/Collaboration_Request__c/fields/Budget_Impact__c.field-meta.xml
<CustomField>
    <fullName>Budget_Impact__c</fullName>
    <label>Budget Impact</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>