force-app/main/default/objects/Collaboration_Request__c/fields/Related_Project__c.field-meta.xml
<CustomField>
    <fullName>Related_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Project</label>
    <referenceTo>Pharma_Project__c</referenceTo>
    <relationshipLabel>Collaboration Requests</relationshipLabel>
    <relationshipName>Related_Project</relationshipName>
    <type>Lookup</type>
</CustomField>