force-app/main/default/objects/Collaboration_Request__c/fields/Requesting_Department__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requesting Department</label>
    <referenceTo>Department_Island__c</referenceTo>
    <relationshipLabel>Outgoing Requests</relationshipLabel>
    <relationshipName>Requesting_Department</relationshipName>
    <type>Lookup</type>
</CustomField>