force-app/main/default/objects/Collaboration_Request__c/fields/Target_Department__c.field-meta.xml
<CustomField>
    <fullName>Target_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Department</label>
    <referenceTo>Department_Island__c</referenceTo>
    <relationshipLabel>Incoming Requests</relationshipLabel>
    <relationshipName>Target_Department</relationshipName>
    <type>Lookup</type>
</CustomField>